--- a/index.html
+++ b/index.html
@@ -14100,6 +14100,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Proportion-of-county-in-poor-health">Proportion of county in poor health<a class="anchor-link" href="#Proportion-of-county-in-poor-health">&#182;</a></h1><p>This is the response variable we will be examining in this presentation. What variables help predict poor health?</p>
+<p>Data is from <a href="https://www.countyhealthrankings.org/">countyhealthrankings.org</a>.</p>
 
 </div>
 </div></section></section><section><section>
@@ -15061,52 +15062,42 @@ Name: Adult.Obesity, dtype: float64
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Conclusions">Conclusions<a class="anchor-link" href="#Conclusions">&#182;</a></h1><ol>
-<li>Which of the x variables are the most important predictors for poor health status?</li>
-</ol>
-<ul>
+<li>Which of the x variables are the most important predictors for poor health status?<ul>
 <li>The most important predictor is by far median household income. Other important predictors include life expectancy and insufficient sleep. Less important predictors include proportion of uninsured, smokers, and excessive drinking.</li>
 </ul>
-<ol>
-<li>Are there any x variables we thought would be good predictors but are not actually?</li>
-</ol>
-<ul>
+</li>
+<li>Are there any x variables we thought would be good predictors but are not actually?<ul>
 <li>Yes; I thought adult obesity would be an important predictor of proportion of poor health, but it is actually relatively not important. Physical inactivity is also not an important predictor, but that could just be because it is too collinear with life expectancy.</li>
 </ul>
-<ol>
-<li>What interesting correlations between the predictor variables can we find?</li>
-</ol>
-<ul>
+</li>
+<li>What interesting correlations between the predictor variables can we find?<ul>
 <li>Relationships I found interesting were the negative correlation between excessive drinking and proportion of smokers, the positive correlation between physical inactivity and percent rural, and the positive correlation between excessive drinking and median household income.</li>
 </ul>
+</li>
+</ol>
 
 </div>
 </div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Suggestions-for-further-research">Suggestions for further research<a class="anchor-link" href="#Suggestions-for-further-research">&#182;</a></h2><ol>
-<li>Get data for other possible predictor variables such as proportion living with families larger than 3, climate type, number of fast food restaurants per 1000, etc.</li>
-</ol>
-<ul>
+<li>Get data for other possible predictor variables such as proportion living with families larger than 3, climate type, number of fast food restaurants per 1000, etc.<ul>
 <li>Are these important in predicting poor health? I'm especially interested in climate type, since I noticed many of the lower proportion of poor health counties were located in the northern US.</li>
 </ul>
-<ol>
-<li>Get this data from 100 years ago.</li>
-</ol>
-<ul>
+</li>
+<li>Get this data from 100 years ago.<ul>
 <li>Has the importance of predictors changed over time?</li>
 </ul>
-<ol>
-<li>Research successful initiatives to decrease proportion of poor health.</li>
-</ol>
-<ul>
+</li>
+<li>Research successful initiatives to decrease proportion of poor health.<ul>
 <li>This would probably entail less statistical analysis and reading more case studies.</li>
 </ul>
-<ol>
-<li>Research why exactly median household income is the most important predictor of poor health.</li>
-</ol>
-<ul>
+</li>
+<li>Research why exactly median household income is the most important predictor of poor health.<ul>
 <li>What do counties with higher median income do differently to keep their residents healthy? Variation in proportion of poor health in counties with low median household income can also be explored.</li>
 </ul>
+</li>
+</ol>
 
 </div>
 </div></section></section>
